--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
-  
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
 </head>
- <body>
-<div class = 'outside-box'>
-<div class = 'inside-box'>
-  <img src = '/images/image-qr-code.png' class="img" width ='100%' height = '100%'>
-</div>
-<div class = 'textbox'>
- <h2> Improve your front-end <br/>
-  skill by building projects </h2>
 
-  <span>Scan the QR code to visit Frontend <br/>
-    Mentor and take your coding skills to <br/>
-    the next level</span>
-</div>
+<body>
+  <main>
+    <div calss='container'>
+      <div class='outside-box'>
+        <div class='inside-box'>
+          <img src='/images/image-qr-code.png' alt="qr-genarate" class="img" width='345px' height='345px'>
+        </div>
+        <div class='textbox'>
+          <h2> Improve your front-end skill by building projects </h2>
+          <p>Scan the QR code to visit Frontend
+            Mentor and take your coding skills to
+            the next level</p>
+        </div>
 
-</div>
+      </div>
 
-</div>
+    </div>
+    </div>
+  </main>
 </body>
+
+
 </html>
